@@ -645,6 +645,10 @@ can edit this one too.</td>
             <td>The configuration file for the Clan Types.</td>
           </tr>
           <tr>
+            <td>ipblock.txt</td>
+            <td>A list of all ip addresses or ip ranges to block!</td>
+          </tr>
+          <tr>
             <td>laws.ini</td>
             <td>The default configuration file for the Arrest behavior.
 You can edit this, but its easier to deal with law through law books.</td>
